# joovy

./: .env.example  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  README.md  build.yaml  deploy.sh  deployment.yml.j2  generate_entity.sh  jest.config.ts  package.json  service-account.yml.j2  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/workflows/: ci.yml  deploy.yml  extra.yml  github-actions-demo.yml  release.yml  run-tests.yml  test.yml
charts/joovy/: values.yaml
core/: .env.example  .eslintrc.js  README.md  build.yaml  deploy.sh  jest.config.ts  package.json
core/scripts/: backup.sh  deploy.sh  dump.sh  restore.sh
core/src/: JMessage.ts  config.ts  disconnect.ts  logger.ts  main.ts  messageHandler.ts  resultLogger.ts
documents/: db-model.md
entity/: Cargo.toml
entity/src/: author.rs  lib.rs  playlist.rs  prelude.rs  track.rs  track_query.rs  track_query_result.rs
gateway/: Dockerfile  README.md  package.json  supergraph-config.yml  supergraph.gql
logger/: Cargo.toml
migration/: Cargo.toml
rust-testing/: Cargo.toml
search/: Cargo.toml
src/: Environment.ts  Event.ts  JEvent.ts  JMessage.ts  Store.ts  client.rs  command_context.rs  command_handler.rs  config.ts  connectionHandler.spec.ts  connectionHandler.ts  db.rs  environment.ts  errorHandler.ts  guild_store.rs  handler.rs  logger.ts  main.rs  main.ts  messageHandler.spec.ts  messageHandler.ts  observablePlaylist.ts  player.ts  playlist.ts  queryResolver.ts  test.spec.ts  util.ts  ytdl.ts
ytsearch/: .env  Cargo.toml  index.html
(+192 files in other folders)
