[workspace]
members = [".", "logger", "search", "migration", "entity"]

[package]
name = "joovy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
serenity = "0.11.5"
songbird = "0.3.0"
tokio = { version = "1.20.1", features = ["full"] }
logger = { path = "logger" }
search = { path = "search" }
tracing = "0.1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
enum_dispatch = "0.3.8"
typed-builder = "0.10.0"
sea-orm = { version = "0.9.2", features = [
  "sqlx-postgres",
  "runtime-actix-native-tls",
  "macros",
  "debug-print",
] }
migration = { path = "migration" }
entity = { path = "entity" }
chrono = "0.4"
